fixed dashboard buttons alignment

--- a/apps/_dashboard/static/css/future.css
+++ b/apps/_dashboard/static/css/future.css
@@ -273,7 +273,7 @@ label {
 }
 .right {
   text-align: right;
-  margin-bottom: 10px;
+  margin: 10px 0 10px 0;
 }
 .fa.red {
   background-color: transparent;
